# unigame

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
ci/travis/: install-linux.sh
include/: Configuration.h  Functions.h  GraphicScene.h  GraphicView.h  ILevel.h  LevelTriangles.h  Levels.h  Matrix.h  SplashCompany.h  StartMenu.h  UniMainWindow.h  graphicscell.h
include/levels/: ILevel.h  LevelTriangles.cpp  LevelTriangles.h  Level_Labirint_1.cpp  Level_Labirint_1.h  Level_Labirint_2.cpp  Level_Labirint_2.h  Level_Labirint_3.cpp  Level_Labirint_3.h  Level_LengthAndDistance_1.cpp  Level_LengthAndDistance_1.h  Level_LengthAndDistance_2.cpp  Level_LengthAndDistance_2.h  Level_LengthAndDistance_3.cpp  Level_LengthAndDistance_3.h  Level_Parallelogram_1.cpp  Level_Parallelogram_1.h  Level_Parallelogram_2.cpp  Level_Parallelogram_2.h  Level_Parallelogram_3.cpp  Level_Parallelogram_3.h  Level_Triangle_1.cpp  Level_Triangle_1.h  Level_Triangle_2.cpp  Level_Triangle_2.h  Level_Triangle_3.cpp  Level_Triangle_3.h  Point.h  aStarAlgorithm.h
src/: GraphicScene.cpp  GraphicView.cpp  LevelTriangles.cpp  Matrix.cpp  StartMenu.cpp  UniMainWindow.cpp  graphicscell.cpp  main.cpp  resource.qrc
src/statistic/: statistic.csv
src/translate/: unigame_en.qm  unigame_en.ts
ui/: Matrix.cpp  Matrix.h  Matrix.ui  StartMenu.ui  UniMainWindow.ui
